[tool.poetry]
name = "task-manager-bot"
version = "0.1.0"
description = ""
authors = ["zhukata <zhukata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
asyncpg = "^0.30.0"
httpx = "^0.27.2"
psycopg = "^3.2.3"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
